--- a/landrules-react/package.json
+++ b/landrules-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-ant-design-less",
+  "name": "landrules-react",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -7,15 +7,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
-    "antd": "^3.5.4",
-    "babel-plugin-import": "^1.7.0",
-    "less": "3.0.4",
+    "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.12.2",
+    "babel-plugin-import": "^1.13.3",
+    "less": "^4.1.1",
     "less-vars-to-js": "1.3.0",
     "next": "latest",
-    "null-loader": "2.0.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "next-plugin-antd-less": "^0.3.0",
+    "null-loader": "^4.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "webpack": "^5.21.2"
   },
   "license": "MIT"
 }
