--- a/landrules-react/package.json
+++ b/landrules-react/package.json
@@ -1,25 +1,18 @@
 {
   "name": "landrules-react",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
     "antd": "^4.12.2",
-    "babel-plugin-import": "^1.13.3",
-    "less": "^4.1.1",
-    "less-vars-to-js": "1.3.0",
-    "next": "latest",
-    "next-plugin-antd-less": "^0.3.0",
-    "null-loader": "^4.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "webpack": "^5.21.2"
-  },
-  "license": "MIT"
+    "next": "10.0.6",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
+  }
 }
