--- a/landrules-server/package.json
+++ b/landrules-server/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.11.15",
+        "validator": "^13.5.2",
         "web3": "^1.3.4"
     }
 }
