--- a/landrules-react/package.json
+++ b/landrules-react/package.json
@@ -9,11 +9,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.12.2",
+    "axios": "^0.21.1",
     "craco-less": "^1.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.3.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "craco start",
