--- a/landrules-server/package.json
+++ b/landrules-server/package.json
@@ -15,7 +15,10 @@
         "@truffle/hdwallet-provider": "^1.2.1",
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
+        "eth-sig-util": "^3.0.1",
+        "ethereumjs-util": "^6.2.1",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.15",
         "validator": "^13.5.2",
         "web3": "^1.3.4"
