--- a/landrules-server/package.json
+++ b/landrules-server/package.json
@@ -13,7 +13,10 @@
     "dependencies": {
         "@openzeppelin/contracts": "^3.4.0",
         "@truffle/hdwallet-provider": "^1.2.1",
+        "bn-chai": "^1.0.1",
+        "bn.js": "^5.1.3",
         "body-parser": "^1.19.0",
+        "chai": "^4.3.0",
         "dotenv": "^8.2.0",
         "eth-sig-util": "^3.0.1",
         "ethereumjs-util": "^6.2.1",
