--- a/landrules-server/package.json
+++ b/landrules-server/package.json
@@ -21,6 +21,7 @@
         "eth-sig-util": "^3.0.1",
         "ethereumjs-util": "^6.2.1",
         "express": "^4.17.1",
+        "js-sha256": "^0.9.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.15",
         "validator": "^13.5.2",
