--- a/landrules-react/package.json
+++ b/landrules-react/package.json
@@ -12,8 +12,10 @@
     "antd": "^4.12.2",
     "axios": "^0.21.1",
     "craco-less": "^1.17.1",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.4",
