--- a/landrules-react/package.json
+++ b/landrules-react/package.json
@@ -11,12 +11,14 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.12.2",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "craco-less": "^1.17.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.2",
+    "sass": "^1.32.7",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.4",
     "yarn": "^1.22.10"
